--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,11 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
+    <div>
+      <p id="excuse"></p>
+      <p id="excuse">My dog ate my homework</p>
+    </div>
+
     <div class="container-fluid text-center">
       <h1 class="mt-5">Hello Rigo!</h1>
       <img src="./rigo-baby.jpg" />
