--- a/src/index.html
+++ b/src/index.html
@@ -22,11 +22,8 @@
     <div class="container-fluid text-center">
       <div class="my-5">
         <p id="generador"></p>
-        <button class="btn btn-outline-warning" id="boton">
-          Click to see what happened.
-        </button>
       </div>
     </div>
-    <script src="app.js"></script>
+    <script src="src/app.js"></script>
   </body>
 </html>
